tests/errors/sem6.kt
fun main() {
    val x: Int = 5;
    x = 10; // immutable
}